# shared_memory_boost_ipc

./: .gitignore  CMakeLists.txt  README.ko.md  README.md
include/: README.ko.md  README.md  shared_ipc.hpp
reader/: CMakeLists.txt  README.ko.md  README.md  reader.cpp
writer/: CMakeLists.txt  README.ko.md  README.md  writer.cpp
